--- a/archives/toutiao-search/2023-11-18.md
+++ b/archives/toutiao-search/2023-11-18.md
@@ -1,57 +1,78 @@
 # 2023-11-18
 
-共 148 条
+共 164 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 18 2023 10:17:57 GMT+0800 (China Standard Time) -->
-1. [美国撤出2万亿对印度经济有何影响](https://so.toutiao.com/search?keyword=美国撤出2万亿对印度经济有何影响)
-1. [四川省城市联赛爆发大规模冲突](https://so.toutiao.com/search?keyword=四川省城市联赛爆发大规模冲突)
-1. [谱写亚太合作新篇章](https://so.toutiao.com/search?keyword=谱写亚太合作新篇章)
-1. [外媒热议中美元首旧金山会晤](https://so.toutiao.com/search?keyword=外媒热议中美元首旧金山会晤)
-1. [外交部回应日希望中方取消水产禁令](https://so.toutiao.com/search?keyword=外交部回应日希望中方取消水产禁令)
-1. [南昌一条街多家店铺使用“五两秤”](https://so.toutiao.com/search?keyword=南昌一条街多家店铺使用“五两秤”)
-1. [台名嘴评拜登称赞红旗车并探头细看](https://so.toutiao.com/search?keyword=台名嘴评拜登称赞红旗车并探头细看)
-1. [冯德莱恩：将带着诚意访华](https://so.toutiao.com/search?keyword=冯德莱恩：将带着诚意访华)
+<!-- 最后更新时间 Sat Nov 18 2023 11:00:38 GMT+0800 (China Standard Time) -->
 1. [演员杜旭东为给电诈头目庆生道歉](https://so.toutiao.com/search?keyword=演员杜旭东为给电诈头目庆生道歉)
-1. [中国水产进口禁令对日本有何影响](https://so.toutiao.com/search?keyword=中国水产进口禁令对日本有何影响)
+1. [美国撤出2万亿对印度经济有何影响](https://so.toutiao.com/search?keyword=美国撤出2万亿对印度经济有何影响)
+1. [推动亚太合作再出发](https://so.toutiao.com/search?keyword=推动亚太合作再出发)
+1. [白宫发声明谴责马斯克涉犹太言论](https://so.toutiao.com/search?keyword=白宫发声明谴责马斯克涉犹太言论)
+1. [台名嘴评拜登称赞红旗车并探头细看](https://so.toutiao.com/search?keyword=台名嘴评拜登称赞红旗车并探头细看)
+1. [马云办公室回应减持1000万股股票](https://so.toutiao.com/search?keyword=马云办公室回应减持1000万股股票)
+1. [外交部回应日希望中方取消水产禁令](https://so.toutiao.com/search?keyword=外交部回应日希望中方取消水产禁令)
+1. [马斯克被批“支持反犹”牵连X平台](https://so.toutiao.com/search?keyword=马斯克被批“支持反犹”牵连X平台)
+1. [冯德莱恩：将带着诚意访华](https://so.toutiao.com/search?keyword=冯德莱恩：将带着诚意访华)
+1. [在旧金山看中国主场外交活动现场](https://so.toutiao.com/search?keyword=在旧金山看中国主场外交活动现场)
 1. [消炎药是抗生素？大不相同](https://so.toutiao.com/search?keyword=消炎药是抗生素？大不相同)
 1. [明学昌大儿子截瘫未被通缉](https://so.toutiao.com/search?keyword=明学昌大儿子截瘫未被通缉)
-1. [景甜现场摸许凯腹肌](https://so.toutiao.com/search?keyword=景甜现场摸许凯腹肌)
+1. [本轮巴以冲突致双方超1.34万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突致双方超1.34万人死亡)
 1. [羽生结弦离婚原因](https://so.toutiao.com/search?keyword=羽生结弦离婚原因)
 1. [女小生走红：老公不是性别而是感觉](https://so.toutiao.com/search?keyword=女小生走红：老公不是性别而是感觉)
-1. [小伙公交车上拉大便 公交公司回应](https://so.toutiao.com/search?keyword=小伙公交车上拉大便+公交公司回应)
-1. [刘亦菲于适同框生图](https://so.toutiao.com/search?keyword=刘亦菲于适同框生图)
+1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
+1. [景甜现场摸许凯腹肌](https://so.toutiao.com/search?keyword=景甜现场摸许凯腹肌)
 1. [蔡国庆披斗篷重游什刹海](https://so.toutiao.com/search?keyword=蔡国庆披斗篷重游什刹海)
-1. [“东北大花”：土到极致就是潮吗](https://so.toutiao.com/search?keyword=“东北大花”：土到极致就是潮吗)
+1. [刘亦菲于适同框生图](https://so.toutiao.com/search?keyword=刘亦菲于适同框生图)
 1. [老年痴呆症正在悄悄年轻化](https://so.toutiao.com/search?keyword=老年痴呆症正在悄悄年轻化)
 1. [卡桑旅称对在耶路撒冷枪杀以军负责](https://so.toutiao.com/search?keyword=卡桑旅称对在耶路撒冷枪杀以军负责)
 1. [医生举报科室为拿回扣用贵40倍注射液](https://so.toutiao.com/search?keyword=医生举报科室为拿回扣用贵40倍注射液)
 1. [马航MH370事件过去9年有哪些新进展](https://so.toutiao.com/search?keyword=马航MH370事件过去9年有哪些新进展)
+1. [哈马斯称以军袭击致超1.2万人死亡](https://so.toutiao.com/search?keyword=哈马斯称以军袭击致超1.2万人死亡)
+1. [小伙公交车上拉大便 公交公司回应](https://so.toutiao.com/search?keyword=小伙公交车上拉大便+公交公司回应)
+1. [女子称17岁被父母逼迫嫁人 官方介入](https://so.toutiao.com/search?keyword=女子称17岁被父母逼迫嫁人+官方介入)
+1. [电诈头目：因业绩不达标组员被卖掉](https://so.toutiao.com/search?keyword=电诈头目：因业绩不达标组员被卖掉)
+1. [国足延续66年世预赛首战不败纪录](https://so.toutiao.com/search?keyword=国足延续66年世预赛首战不败纪录)
+1. [中国“霸总”爽剧在海外杀疯了](https://so.toutiao.com/search?keyword=中国“霸总”爽剧在海外杀疯了)
+1. [“东北大花”：土到极致就是潮吗](https://so.toutiao.com/search?keyword=“东北大花”：土到极致就是潮吗)
+1. [年度最让人心疼的夫妇](https://so.toutiao.com/search?keyword=年度最让人心疼的夫妇)
+1. [哪些国家还没缴清联合国会费](https://so.toutiao.com/search?keyword=哪些国家还没缴清联合国会费)
+1. [加沙记者徒手在废墟中找家人](https://so.toutiao.com/search?keyword=加沙记者徒手在废墟中找家人)
+1. [外卖小哥撞坏保时捷受伤担心赔不起](https://so.toutiao.com/search?keyword=外卖小哥撞坏保时捷受伤担心赔不起)
+1. [南昌一条街多家店铺使用“五两秤”](https://so.toutiao.com/search?keyword=南昌一条街多家店铺使用“五两秤”)
+1. [特斯拉投资者痛批马斯克不配当CEO](https://so.toutiao.com/search?keyword=特斯拉投资者痛批马斯克不配当CEO)
+1. [生态环境部刘志全被查](https://so.toutiao.com/search?keyword=生态环境部刘志全被查)
+1. [女儿被罚站听到爸爸开门破防哭了](https://so.toutiao.com/search?keyword=女儿被罚站听到爸爸开门破防哭了)
+1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
+1. [俄称击落乌空军战机](https://so.toutiao.com/search?keyword=俄称击落乌空军战机)
+1. [华为公司取得芯片封装结构专利](https://so.toutiao.com/search?keyword=华为公司取得芯片封装结构专利)
+1. [警方齐聚云南押送电诈嫌疑人回乡](https://so.toutiao.com/search?keyword=警方齐聚云南押送电诈嫌疑人回乡)
+1. [日本海底火山喷发形成一座新岛屿](https://so.toutiao.com/search?keyword=日本海底火山喷发形成一座新岛屿)
+1. [哈马斯指挥中心在加沙医院吗](https://so.toutiao.com/search?keyword=哈马斯指挥中心在加沙医院吗)
+1. [女子开车看不懂交警指挥手势不敢走](https://so.toutiao.com/search?keyword=女子开车看不懂交警指挥手势不敢走)
+1. [媒体：巩固电影市场好势头](https://so.toutiao.com/search?keyword=媒体：巩固电影市场好势头)
+1. [超200名球迷凌晨机场接机国足](https://so.toutiao.com/search?keyword=超200名球迷凌晨机场接机国足)
+1. [《斗破苍穹》首部电影上线](https://so.toutiao.com/search?keyword=《斗破苍穹》首部电影上线)
+1. [19辆货车高速上飙车时速超140公里](https://so.toutiao.com/search?keyword=19辆货车高速上飙车时速超140公里)
+1. [武磊反击单挑对手可惜体能耗尽](https://so.toutiao.com/search?keyword=武磊反击单挑对手可惜体能耗尽)
+1. [四川省城市联赛爆发大规模冲突](https://so.toutiao.com/search?keyword=四川省城市联赛爆发大规模冲突)
+1. [谱写亚太合作新篇章](https://so.toutiao.com/search?keyword=谱写亚太合作新篇章)
+1. [外媒热议中美元首旧金山会晤](https://so.toutiao.com/search?keyword=外媒热议中美元首旧金山会晤)
+1. [中国水产进口禁令对日本有何影响](https://so.toutiao.com/search?keyword=中国水产进口禁令对日本有何影响)
 1. [小女孩滑梯口奶声奶气唱七子之歌](https://so.toutiao.com/search?keyword=小女孩滑梯口奶声奶气唱七子之歌)
 1. [西安有耕地被盗采挖出足球场大坑](https://so.toutiao.com/search?keyword=西安有耕地被盗采挖出足球场大坑)
 1. [奇瑞风云序列首发车型A8亮相](https://so.toutiao.com/search?keyword=奇瑞风云序列首发车型A8亮相)
-1. [白宫发声明谴责马斯克涉犹太言论](https://so.toutiao.com/search?keyword=白宫发声明谴责马斯克涉犹太言论)
 1. [校运会开幕式老师方阵出场时赢麻了](https://so.toutiao.com/search?keyword=校运会开幕式老师方阵出场时赢麻了)
-1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
-1. [哪些国家还没缴清联合国会费](https://so.toutiao.com/search?keyword=哪些国家还没缴清联合国会费)
-1. [年度最让人心疼的夫妇](https://so.toutiao.com/search?keyword=年度最让人心疼的夫妇)
-1. [中国“霸总”爽剧在海外杀疯了](https://so.toutiao.com/search?keyword=中国“霸总”爽剧在海外杀疯了)
 1. [拜登将APEC主席职务移交给秘鲁总统](https://so.toutiao.com/search?keyword=拜登将APEC主席职务移交给秘鲁总统)
 1. [男子斑马线上徘徊阻碍轿车通行](https://so.toutiao.com/search?keyword=男子斑马线上徘徊阻碍轿车通行)
 1. [扬科维奇：年轻球员控制住了情绪](https://so.toutiao.com/search?keyword=扬科维奇：年轻球员控制住了情绪)
-1. [生态环境部刘志全被查](https://so.toutiao.com/search?keyword=生态环境部刘志全被查)
 1. [“ChatGPT之父”被罢免](https://so.toutiao.com/search?keyword=“ChatGPT之父”被罢免)
 1. [油价有望迎来大跌](https://so.toutiao.com/search?keyword=油价有望迎来大跌)
-1. [外卖小哥撞坏保时捷受伤担心赔不起](https://so.toutiao.com/search?keyword=外卖小哥撞坏保时捷受伤担心赔不起)
-1. [《斗破苍穹》首部电影上线](https://so.toutiao.com/search?keyword=《斗破苍穹》首部电影上线)
-1. [女子称17岁被父母逼迫嫁人 官方介入](https://so.toutiao.com/search?keyword=女子称17岁被父母逼迫嫁人+官方介入)
 1. [外媒：特朗普将是全世界最大的威胁](https://so.toutiao.com/search?keyword=外媒：特朗普将是全世界最大的威胁)
 1. [韩媒：中韩足球实力差距仍存在](https://so.toutiao.com/search?keyword=韩媒：中韩足球实力差距仍存在)
 1. [余承东：智界问界后还有2个“界”](https://so.toutiao.com/search?keyword=余承东：智界问界后还有2个“界”)
 1. [《非凡医者》罗海涛给儿子捐肝](https://so.toutiao.com/search?keyword=《非凡医者》罗海涛给儿子捐肝)
 1. [克扣学生报酬责任人被捕？官方回应](https://so.toutiao.com/search?keyword=克扣学生报酬责任人被捕？官方回应)
 1. [拜登盛赞加州州长：他可以当总统](https://so.toutiao.com/search?keyword=拜登盛赞加州州长：他可以当总统)
-1. [女儿被罚站听到爸爸开门破防哭了](https://so.toutiao.com/search?keyword=女儿被罚站听到爸爸开门破防哭了)
 1. [国足客战泰国有何改变](https://so.toutiao.com/search?keyword=国足客战泰国有何改变)
 1. [1000万元保险预付赔款拨付永聚煤矿](https://so.toutiao.com/search?keyword=1000万元保险预付赔款拨付永聚煤矿)
 1. [王自如加入格力两年半干得如何](https://so.toutiao.com/search?keyword=王自如加入格力两年半干得如何)
@@ -59,7 +80,6 @@
 1. [牛弹琴：缅北这一招中国干得漂亮](https://so.toutiao.com/search?keyword=牛弹琴：缅北这一招中国干得漂亮)
 1. [美方承认“太多平民被以色列杀害”](https://so.toutiao.com/search?keyword=美方承认“太多平民被以色列杀害”)
 1. [“正威系”铜业务子公司停产放假](https://so.toutiao.com/search?keyword=“正威系”铜业务子公司停产放假)
-1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
 1. [以色列反对派呼吁内塔尼亚胡辞职](https://so.toutiao.com/search?keyword=以色列反对派呼吁内塔尼亚胡辞职)
 1. [加沙3岁男孩躲过3次空袭：失去双腿](https://so.toutiao.com/search?keyword=加沙3岁男孩躲过3次空袭：失去双腿)
 1. [五菱星光开启预订 预售9.38万起](https://so.toutiao.com/search?keyword=五菱星光开启预订+预售9.38万起)
@@ -85,7 +105,6 @@
 1. [13支球队晋级欧洲杯正赛](https://so.toutiao.com/search?keyword=13支球队晋级欧洲杯正赛)
 1. [曝威少已主动向球队申请替补出战](https://so.toutiao.com/search?keyword=曝威少已主动向球队申请替补出战)
 1. [刘世锦：中国有5-10年中速增长潜力](https://so.toutiao.com/search?keyword=刘世锦：中国有5-10年中速增长潜力)
-1. [国足延续66年世预赛首战不败纪录](https://so.toutiao.com/search?keyword=国足延续66年世预赛首战不败纪录)
 1. [若日尼奥在国家队连续罚丢4个点球](https://so.toutiao.com/search?keyword=若日尼奥在国家队连续罚丢4个点球)
 1. [玩蹦床致9级伤残 蹦床馆被判赔20万](https://so.toutiao.com/search?keyword=玩蹦床致9级伤残+蹦床馆被判赔20万)
 1. [白宫：“绝对欢迎”大熊猫重返美国](https://so.toutiao.com/search?keyword=白宫：“绝对欢迎”大熊猫重返美国)
@@ -110,7 +129,6 @@
 1. [韦世豪被换下怒气冲冲](https://so.toutiao.com/search?keyword=韦世豪被换下怒气冲冲)
 1. [巴方：加沙所有医院均已停止服务](https://so.toutiao.com/search?keyword=巴方：加沙所有医院均已停止服务)
 1. [女童幼儿园遭男童猥亵？警方辟谣](https://so.toutiao.com/search?keyword=女童幼儿园遭男童猥亵？警方辟谣)
-1. [哈马斯指挥中心在加沙医院吗](https://so.toutiao.com/search?keyword=哈马斯指挥中心在加沙医院吗)
 1. [巴克莱：预计明年全球股市跑赢债市](https://so.toutiao.com/search?keyword=巴克莱：预计明年全球股市跑赢债市)
 1. [终于明白了皮肤的重要性](https://so.toutiao.com/search?keyword=终于明白了皮肤的重要性)
 1. [以色列被土耳其告上国际法院](https://so.toutiao.com/search?keyword=以色列被土耳其告上国际法院)
@@ -124,7 +142,6 @@
 1. [中美商务部长会谈有哪些点值得关注](https://so.toutiao.com/search?keyword=中美商务部长会谈有哪些点值得关注)
 1. [护士抱起浑身抽搐女童20秒冲进急诊](https://so.toutiao.com/search?keyword=护士抱起浑身抽搐女童20秒冲进急诊)
 1. [外交部：希望中美两国人民多来往](https://so.toutiao.com/search?keyword=外交部：希望中美两国人民多来往)
-1. [推动亚太合作再出发](https://so.toutiao.com/search?keyword=推动亚太合作再出发)
 1. [雷霆三分命中率联盟第一](https://so.toutiao.com/search?keyword=雷霆三分命中率联盟第一)
 1. [俄罗斯外交官盛赞中俄关系](https://so.toutiao.com/search?keyword=俄罗斯外交官盛赞中俄关系)
 1. [波杰姆斯基7中4拿到13分8篮板](https://so.toutiao.com/search?keyword=波杰姆斯基7中4拿到13分8篮板)
@@ -148,7 +165,6 @@
 1. [美国男子沙漠迷路吃蝌蚪充饥终获救](https://so.toutiao.com/search?keyword=美国男子沙漠迷路吃蝌蚪充饥终获救)
 1. [贝尔萨：击败阿根廷并不能带来什么](https://so.toutiao.com/search?keyword=贝尔萨：击败阿根廷并不能带来什么)
 1. [iCAR 03在广州车展开启盲订](https://so.toutiao.com/search?keyword=iCAR+03在广州车展开启盲订)
-1. [武磊反击单挑对手可惜体能耗尽](https://so.toutiao.com/search?keyword=武磊反击单挑对手可惜体能耗尽)
 1. [黄健翔：韦世豪你要好好踢球](https://so.toutiao.com/search?keyword=黄健翔：韦世豪你要好好踢球)
 1. [多款重磅新能源MPV亮相广州车展](https://so.toutiao.com/search?keyword=多款重磅新能源MPV亮相广州车展)
 1. [城管与冬泳者起冲突双方均有人落水](https://so.toutiao.com/search?keyword=城管与冬泳者起冲突双方均有人落水)
