--- a/archives/toutiao-search/2023-11-18.md
+++ b/archives/toutiao-search/2023-11-18.md
@@ -1,59 +1,78 @@
 # 2023-11-18
 
-共 164 条
+共 180 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 18 2023 11:00:38 GMT+0800 (China Standard Time) -->
-1. [演员杜旭东为给电诈头目庆生道歉](https://so.toutiao.com/search?keyword=演员杜旭东为给电诈头目庆生道歉)
-1. [美国撤出2万亿对印度经济有何影响](https://so.toutiao.com/search?keyword=美国撤出2万亿对印度经济有何影响)
-1. [推动亚太合作再出发](https://so.toutiao.com/search?keyword=推动亚太合作再出发)
+<!-- 最后更新时间 Sat Nov 18 2023 12:00:50 GMT+0800 (China Standard Time) -->
 1. [白宫发声明谴责马斯克涉犹太言论](https://so.toutiao.com/search?keyword=白宫发声明谴责马斯克涉犹太言论)
+1. [电诈头目：因业绩不达标组员被卖掉](https://so.toutiao.com/search?keyword=电诈头目：因业绩不达标组员被卖掉)
+1. [推动亚太合作再出发](https://so.toutiao.com/search?keyword=推动亚太合作再出发)
+1. [蓝营议员：赖清德应宣布反“台独”](https://so.toutiao.com/search?keyword=蓝营议员：赖清德应宣布反“台独”)
 1. [台名嘴评拜登称赞红旗车并探头细看](https://so.toutiao.com/search?keyword=台名嘴评拜登称赞红旗车并探头细看)
-1. [马云办公室回应减持1000万股股票](https://so.toutiao.com/search?keyword=马云办公室回应减持1000万股股票)
+1. [外卖小哥撞坏保时捷受伤担心赔不起](https://so.toutiao.com/search?keyword=外卖小哥撞坏保时捷受伤担心赔不起)
+1. [西昌市委原书记李俊夫妇贪腐细节](https://so.toutiao.com/search?keyword=西昌市委原书记李俊夫妇贪腐细节)
 1. [外交部回应日希望中方取消水产禁令](https://so.toutiao.com/search?keyword=外交部回应日希望中方取消水产禁令)
-1. [马斯克被批“支持反犹”牵连X平台](https://so.toutiao.com/search?keyword=马斯克被批“支持反犹”牵连X平台)
-1. [冯德莱恩：将带着诚意访华](https://so.toutiao.com/search?keyword=冯德莱恩：将带着诚意访华)
-1. [在旧金山看中国主场外交活动现场](https://so.toutiao.com/search?keyword=在旧金山看中国主场外交活动现场)
+1. [余承东：智界问界后还有2个“界”](https://so.toutiao.com/search?keyword=余承东：智界问界后还有2个“界”)
+1. [马云办公室回应减持1000万股股票](https://so.toutiao.com/search?keyword=马云办公室回应减持1000万股股票)
 1. [消炎药是抗生素？大不相同](https://so.toutiao.com/search?keyword=消炎药是抗生素？大不相同)
 1. [明学昌大儿子截瘫未被通缉](https://so.toutiao.com/search?keyword=明学昌大儿子截瘫未被通缉)
 1. [本轮巴以冲突致双方超1.34万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突致双方超1.34万人死亡)
+1. [73岁港星回应为电诈头目祝寿](https://so.toutiao.com/search?keyword=73岁港星回应为电诈头目祝寿)
 1. [羽生结弦离婚原因](https://so.toutiao.com/search?keyword=羽生结弦离婚原因)
+1. [蔡国庆披斗篷重游什刹海](https://so.toutiao.com/search?keyword=蔡国庆披斗篷重游什刹海)
 1. [女小生走红：老公不是性别而是感觉](https://so.toutiao.com/search?keyword=女小生走红：老公不是性别而是感觉)
 1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
 1. [景甜现场摸许凯腹肌](https://so.toutiao.com/search?keyword=景甜现场摸许凯腹肌)
-1. [蔡国庆披斗篷重游什刹海](https://so.toutiao.com/search?keyword=蔡国庆披斗篷重游什刹海)
-1. [刘亦菲于适同框生图](https://so.toutiao.com/search?keyword=刘亦菲于适同框生图)
-1. [老年痴呆症正在悄悄年轻化](https://so.toutiao.com/search?keyword=老年痴呆症正在悄悄年轻化)
+1. [“摇滚书记”陈小钢被查](https://so.toutiao.com/search?keyword=“摇滚书记”陈小钢被查)
 1. [卡桑旅称对在耶路撒冷枪杀以军负责](https://so.toutiao.com/search?keyword=卡桑旅称对在耶路撒冷枪杀以军负责)
 1. [医生举报科室为拿回扣用贵40倍注射液](https://so.toutiao.com/search?keyword=医生举报科室为拿回扣用贵40倍注射液)
 1. [马航MH370事件过去9年有哪些新进展](https://so.toutiao.com/search?keyword=马航MH370事件过去9年有哪些新进展)
-1. [哈马斯称以军袭击致超1.2万人死亡](https://so.toutiao.com/search?keyword=哈马斯称以军袭击致超1.2万人死亡)
+1. [以色列中部地区遭火箭弹袭击](https://so.toutiao.com/search?keyword=以色列中部地区遭火箭弹袭击)
 1. [小伙公交车上拉大便 公交公司回应](https://so.toutiao.com/search?keyword=小伙公交车上拉大便+公交公司回应)
-1. [女子称17岁被父母逼迫嫁人 官方介入](https://so.toutiao.com/search?keyword=女子称17岁被父母逼迫嫁人+官方介入)
-1. [电诈头目：因业绩不达标组员被卖掉](https://so.toutiao.com/search?keyword=电诈头目：因业绩不达标组员被卖掉)
-1. [国足延续66年世预赛首战不败纪录](https://so.toutiao.com/search?keyword=国足延续66年世预赛首战不败纪录)
+1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
+1. [陈雨菲击败老对手安洗莹晋级决赛](https://so.toutiao.com/search?keyword=陈雨菲击败老对手安洗莹晋级决赛)
+1. [南昌一条街多家店铺使用“五两秤”](https://so.toutiao.com/search?keyword=南昌一条街多家店铺使用“五两秤”)
 1. [中国“霸总”爽剧在海外杀疯了](https://so.toutiao.com/search?keyword=中国“霸总”爽剧在海外杀疯了)
+1. [哪些国家还没缴清联合国会费](https://so.toutiao.com/search?keyword=哪些国家还没缴清联合国会费)
+1. [武磊反击单挑对手可惜体能耗尽](https://so.toutiao.com/search?keyword=武磊反击单挑对手可惜体能耗尽)
+1. [警方齐聚云南押送电诈嫌疑人回乡](https://so.toutiao.com/search?keyword=警方齐聚云南押送电诈嫌疑人回乡)
+1. [绿营会以司法方式来阻止蓝白合吗](https://so.toutiao.com/search?keyword=绿营会以司法方式来阻止蓝白合吗)
+1. [女儿被罚站听到爸爸开门破防哭了](https://so.toutiao.com/search?keyword=女儿被罚站听到爸爸开门破防哭了)
+1. [警方调查农户4千只鸭子集体死亡](https://so.toutiao.com/search?keyword=警方调查农户4千只鸭子集体死亡)
+1. [特斯拉投资者痛批马斯克不配当CEO](https://so.toutiao.com/search?keyword=特斯拉投资者痛批马斯克不配当CEO)
+1. [媒体：巩固电影市场好势头](https://so.toutiao.com/search?keyword=媒体：巩固电影市场好势头)
+1. [博主探访现实版的八角笼中](https://so.toutiao.com/search?keyword=博主探访现实版的八角笼中)
+1. [日本海底火山喷发形成一座新岛屿](https://so.toutiao.com/search?keyword=日本海底火山喷发形成一座新岛屿)
+1. [网友夸淄博：热心事数也数不完](https://so.toutiao.com/search?keyword=网友夸淄博：热心事数也数不完)
+1. [生态环境部刘志全被查](https://so.toutiao.com/search?keyword=生态环境部刘志全被查)
+1. [专家解答糖尿病逆转](https://so.toutiao.com/search?keyword=专家解答糖尿病逆转)
+1. [今年以来我国外贸运行符合预期](https://so.toutiao.com/search?keyword=今年以来我国外贸运行符合预期)
+1. [俄罗斯莫斯科一银行被盗约3亿卢布](https://so.toutiao.com/search?keyword=俄罗斯莫斯科一银行被盗约3亿卢布)
+1. [博主评00后穿军大衣：最清醒的一代](https://so.toutiao.com/search?keyword=博主评00后穿军大衣：最清醒的一代)
+1. [OpenAI将在CEO离职后召开员工大会](https://so.toutiao.com/search?keyword=OpenAI将在CEO离职后召开员工大会)
+1. [马斯克被批“支持反犹”牵连X平台](https://so.toutiao.com/search?keyword=马斯克被批“支持反犹”牵连X平台)
+1. [卡德罗夫在射击场检验儿子枪法](https://so.toutiao.com/search?keyword=卡德罗夫在射击场检验儿子枪法)
+1. [库里明日出战雷霆成疑](https://so.toutiao.com/search?keyword=库里明日出战雷霆成疑)
+1. [记者暗访“自选快餐称重”](https://so.toutiao.com/search?keyword=记者暗访“自选快餐称重”)
+1. [演员杜旭东为给电诈头目庆生道歉](https://so.toutiao.com/search?keyword=演员杜旭东为给电诈头目庆生道歉)
+1. [美国撤出2万亿对印度经济有何影响](https://so.toutiao.com/search?keyword=美国撤出2万亿对印度经济有何影响)
+1. [冯德莱恩：将带着诚意访华](https://so.toutiao.com/search?keyword=冯德莱恩：将带着诚意访华)
+1. [在旧金山看中国主场外交活动现场](https://so.toutiao.com/search?keyword=在旧金山看中国主场外交活动现场)
+1. [刘亦菲于适同框生图](https://so.toutiao.com/search?keyword=刘亦菲于适同框生图)
+1. [老年痴呆症正在悄悄年轻化](https://so.toutiao.com/search?keyword=老年痴呆症正在悄悄年轻化)
+1. [哈马斯称以军袭击致超1.2万人死亡](https://so.toutiao.com/search?keyword=哈马斯称以军袭击致超1.2万人死亡)
+1. [女子称17岁被父母逼迫嫁人 官方介入](https://so.toutiao.com/search?keyword=女子称17岁被父母逼迫嫁人+官方介入)
+1. [国足延续66年世预赛首战不败纪录](https://so.toutiao.com/search?keyword=国足延续66年世预赛首战不败纪录)
 1. [“东北大花”：土到极致就是潮吗](https://so.toutiao.com/search?keyword=“东北大花”：土到极致就是潮吗)
 1. [年度最让人心疼的夫妇](https://so.toutiao.com/search?keyword=年度最让人心疼的夫妇)
-1. [哪些国家还没缴清联合国会费](https://so.toutiao.com/search?keyword=哪些国家还没缴清联合国会费)
 1. [加沙记者徒手在废墟中找家人](https://so.toutiao.com/search?keyword=加沙记者徒手在废墟中找家人)
-1. [外卖小哥撞坏保时捷受伤担心赔不起](https://so.toutiao.com/search?keyword=外卖小哥撞坏保时捷受伤担心赔不起)
-1. [南昌一条街多家店铺使用“五两秤”](https://so.toutiao.com/search?keyword=南昌一条街多家店铺使用“五两秤”)
-1. [特斯拉投资者痛批马斯克不配当CEO](https://so.toutiao.com/search?keyword=特斯拉投资者痛批马斯克不配当CEO)
-1. [生态环境部刘志全被查](https://so.toutiao.com/search?keyword=生态环境部刘志全被查)
-1. [女儿被罚站听到爸爸开门破防哭了](https://so.toutiao.com/search?keyword=女儿被罚站听到爸爸开门破防哭了)
-1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
 1. [俄称击落乌空军战机](https://so.toutiao.com/search?keyword=俄称击落乌空军战机)
 1. [华为公司取得芯片封装结构专利](https://so.toutiao.com/search?keyword=华为公司取得芯片封装结构专利)
-1. [警方齐聚云南押送电诈嫌疑人回乡](https://so.toutiao.com/search?keyword=警方齐聚云南押送电诈嫌疑人回乡)
-1. [日本海底火山喷发形成一座新岛屿](https://so.toutiao.com/search?keyword=日本海底火山喷发形成一座新岛屿)
 1. [哈马斯指挥中心在加沙医院吗](https://so.toutiao.com/search?keyword=哈马斯指挥中心在加沙医院吗)
 1. [女子开车看不懂交警指挥手势不敢走](https://so.toutiao.com/search?keyword=女子开车看不懂交警指挥手势不敢走)
-1. [媒体：巩固电影市场好势头](https://so.toutiao.com/search?keyword=媒体：巩固电影市场好势头)
 1. [超200名球迷凌晨机场接机国足](https://so.toutiao.com/search?keyword=超200名球迷凌晨机场接机国足)
 1. [《斗破苍穹》首部电影上线](https://so.toutiao.com/search?keyword=《斗破苍穹》首部电影上线)
 1. [19辆货车高速上飙车时速超140公里](https://so.toutiao.com/search?keyword=19辆货车高速上飙车时速超140公里)
-1. [武磊反击单挑对手可惜体能耗尽](https://so.toutiao.com/search?keyword=武磊反击单挑对手可惜体能耗尽)
 1. [四川省城市联赛爆发大规模冲突](https://so.toutiao.com/search?keyword=四川省城市联赛爆发大规模冲突)
 1. [谱写亚太合作新篇章](https://so.toutiao.com/search?keyword=谱写亚太合作新篇章)
 1. [外媒热议中美元首旧金山会晤](https://so.toutiao.com/search?keyword=外媒热议中美元首旧金山会晤)
@@ -69,7 +88,6 @@
 1. [油价有望迎来大跌](https://so.toutiao.com/search?keyword=油价有望迎来大跌)
 1. [外媒：特朗普将是全世界最大的威胁](https://so.toutiao.com/search?keyword=外媒：特朗普将是全世界最大的威胁)
 1. [韩媒：中韩足球实力差距仍存在](https://so.toutiao.com/search?keyword=韩媒：中韩足球实力差距仍存在)
-1. [余承东：智界问界后还有2个“界”](https://so.toutiao.com/search?keyword=余承东：智界问界后还有2个“界”)
 1. [《非凡医者》罗海涛给儿子捐肝](https://so.toutiao.com/search?keyword=《非凡医者》罗海涛给儿子捐肝)
 1. [克扣学生报酬责任人被捕？官方回应](https://so.toutiao.com/search?keyword=克扣学生报酬责任人被捕？官方回应)
 1. [拜登盛赞加州州长：他可以当总统](https://so.toutiao.com/search?keyword=拜登盛赞加州州长：他可以当总统)
@@ -112,7 +130,6 @@
 1. [当兵几年都有什么变化](https://so.toutiao.com/search?keyword=当兵几年都有什么变化)
 1. [马航MH370事件即将开庭 家属回应](https://so.toutiao.com/search?keyword=马航MH370事件即将开庭+家属回应)
 1. [校方回应天不亮学生站操场背书](https://so.toutiao.com/search?keyword=校方回应天不亮学生站操场背书)
-1. [警方调查农户4千只鸭子集体死亡](https://so.toutiao.com/search?keyword=警方调查农户4千只鸭子集体死亡)
 1. [明星被“挂厕所”“开盒”得到整治](https://so.toutiao.com/search?keyword=明星被“挂厕所”“开盒”得到整治)
 1. [嘉凯城及3名高管被深交所通报批评](https://so.toutiao.com/search?keyword=嘉凯城及3名高管被深交所通报批评)
 1. [河南新乡教育局专项招46名在编教师](https://so.toutiao.com/search?keyword=河南新乡教育局专项招46名在编教师)
@@ -145,7 +162,6 @@
 1. [雷霆三分命中率联盟第一](https://so.toutiao.com/search?keyword=雷霆三分命中率联盟第一)
 1. [俄罗斯外交官盛赞中俄关系](https://so.toutiao.com/search?keyword=俄罗斯外交官盛赞中俄关系)
 1. [波杰姆斯基7中4拿到13分8篮板](https://so.toutiao.com/search?keyword=波杰姆斯基7中4拿到13分8篮板)
-1. [网友夸淄博：热心事数也数不完](https://so.toutiao.com/search?keyword=网友夸淄博：热心事数也数不完)
 1. [老人要求小伙让座 遭拒后揪其衣领](https://so.toutiao.com/search?keyword=老人要求小伙让座+遭拒后揪其衣领)
 1. [专访《斗破苍穹·觉醒》导演赵小丁](https://so.toutiao.com/search?keyword=专访《斗破苍穹·觉醒》导演赵小丁)
 1. [挪议会要求政府准备承认巴勒斯坦国](https://so.toutiao.com/search?keyword=挪议会要求政府准备承认巴勒斯坦国)
